# Poker-Range-Trainer

./: .gitignore  Cargo.toml  README.md
src/: .fileio.rs.swp  .range.rs.swp  .range_trainer.rs.swp  .ranges_screen.rs.swp  .study_screen.rs.swp  .styles.rs.swp  3  ]  card.rs  fileio.rs  hand.rs  lib.rs  main.rs  messages.rs  range.rs  range_trainer.rs  ranges_screen.rs  study_screen.rs  styles.rs  svg.rs  toolbar.rs
src/questions/: .fold_equity.rs.swp  .mod.rs.swp  binary_range_question.rs  fold_equity.rs  mod.rs
src/review/: display.rs  item.rs  mod.rs
