[package]
name = "range_trainer"
version = "0.1.0"
authors = ["Dave Fol <dof5@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.1", features = ["svg"]}
iced_native = "0.2.2"
iced_wgpu = "0.2.2"
rand = "0.7.3"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
itertools = "0.9.0"
directories = "2.0"
chrono = {version = "0.4.0", features = ["serde"]}
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
